k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chronicle
  labels:
    app.kubernetes.io/name: chronicle
    app.kubernetes.io/part-of: chronicle
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    goldilocks.fairwinds.com/enabled: "true"
